[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Player/EggController/EggController.gd" type="Script" id=1]


[sub_resource type="CircleShape2D" id=1]
radius = 15.0333

[node name="EggController" type="Node2D"]
script = ExtResource( 1 )

[node name="EggPosition" type="Position2D" parent="."]
position = Vector2( 0, -3 )
__meta__ = {
"_gizmo_extents_": 4.0
}

[node name="EggDetector" type="Area2D" parent="."]
position = Vector2( 0, -13 )
monitorable = false
collision_layer = 0
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="EggDetector"]
shape = SubResource( 1 )
[connection signal="body_entered" from="EggDetector" to="." method="_on_EggDetector_body_entered"]
[connection signal="body_exited" from="EggDetector" to="." method="_on_EggDetector_body_exited"]
